QColorDialog: Streamline painting code of QColorLuminancePicker.

Task-number: QTBUG-36078
Change-Id: Iea7dcb1fdae955615345aa835dc0b1a67840f39d
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>